--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -141,8 +141,8 @@
     <string name="AndOther_other">and %1$d others</string>
     <string name="AndOther_two">and %1$d others</string>
     <string name="AndOther_zero">and %1$d others</string>
-    <string name="AppName">Plus Messenger</string>
-    <string name="AppWillRestart">Plus Messenger will restart</string>
+    <string name="AppName">Telegram Multi</string>
+    <string name="AppWillRestart">Telegram Multi will restart</string>
     <string name="ApplyLocalizationFile">Apply localization file</string>
     <string name="ApplyTheme">APPLY</string>
     <string name="ApplyThemeFile">Apply theme file</string>
@@ -984,7 +984,7 @@ about Telegram?"</string>
     <string name="Invite">Invite</string>
     <string name="InviteFriends">Invite Friends</string>
     <string name="InviteLink">Invite Link</string>
-    <string name="InviteText">"Hey, let's switch to Plus Messenger: http://goo.gl/jnmjnZ"</string>
+    <string name="InviteText">"Эй, давай переключимся на Telegram: https://tlgrm.ru/"</string>
     <string name="InviteToChannelError">"Sorry, you can't add this user to channels because of user's privacy settings."</string>
     <string name="InviteToGroupByLink">Invite to Group via Link</string>
     <string name="InviteToGroupError">"Sorry, you can't add this user to groups because of user's privacy settings."</string>
@@ -1000,7 +1000,7 @@ about Telegram?"</string>
     <string name="Italic">Italic</string>
     <string name="JoinChannel">"
 
-Join Plus Messenger official channel:"</string>
+Join Telegram Multi official channel:"</string>
     <string name="JoinGroup">JOIN GROUP</string>
     <string name="JoinToGroup">"Do you want to join the chat '%1$s'?"</string>
     <string name="JoinToGroupErrorFull">Sorry, this group is already full.</string>
@@ -1395,20 +1395,20 @@ The Telegram Team"</string>
     <string name="OwnNameSize">Name size</string>
     <string name="Page1Message">"The world's &lt;b>fastest&lt;/b> messaging app.
 It is &lt;b>free&lt;/b> and &lt;b>secure&lt;/b>.&lt;br/>And also &lt;b>themeable&lt;/b>!"</string>
-    <string name="Page1Title">Plus Messenger</string>
-    <string name="Page2Message">"&lt;b>Plus Messenger&lt;/b> delivers messages faster than
+    <string name="Page1Title">Telegram Multi</string>
+    <string name="Page2Message">"&lt;b>Telegram Multi&lt;/b> delivers messages faster than
 any other application."</string>
     <string name="Page2Title">Fast</string>
-    <string name="Page3Message">"&lt;b>Plus Messenger&lt;/b> is free forever. No ads.
+    <string name="Page3Message">"&lt;b>Telegram Multi&lt;/b> is free forever. No ads.
 No subscription fees."</string>
     <string name="Page3Title">Free</string>
-    <string name="Page4Message">"&lt;b>Plus Messenger&lt;/b> keeps your messages safe
+    <string name="Page4Message">"&lt;b>Telegram Multi&lt;/b> keeps your messages safe
 from hacker attacks."</string>
     <string name="Page4Title">Secure</string>
-    <string name="Page5Message">"&lt;b>Plus Messenger&lt;/b> has no limits on the size of
+    <string name="Page5Message">"&lt;b>Telegram Multi&lt;/b> has no limits on the size of
 your media and chats."</string>
     <string name="Page5Title">Powerful</string>
-    <string name="Page6Message">"&lt;b>Plus Messenger&lt;/b> lets you access your messages
+    <string name="Page6Message">"&lt;b>Telegram Multi&lt;/b> lets you access your messages
 from multiple devices."</string>
     <string name="Page6Title">Cloud-Based</string>
     <string name="PaintDelete">Delete</string>
@@ -1529,7 +1529,7 @@ Payments will go directly to the developer of %1$s. Telegram cannot provide any 
     <string name="PleaseEnterFirstPassword">Enter a password</string>
     <string name="PleaseEnterPassword">Please enter your new password</string>
     <string name="PleaseReEnterPassword">Please re-enter your password</string>
-    <string name="PlusSettings">Plus Settings</string>
+    <string name="PlusSettings">Multi Settings</string>
     <string name="Points_few">%1$d</string>
     <string name="Points_many">%1$d</string>
     <string name="Points_one">%1$d</string>
@@ -1862,7 +1862,7 @@ Don't take it, Telegram will process everything automatically."</string>
     <string name="TapToEmojify">Tap to emojify</string>
     <string name="TelegramFaq">Telegram FAQ</string>
     <string name="TelegramFaqUrl">https://telegram.org/faq</string>
-    <string name="TelegramForAndroid">Plus Messenger for Android</string>
+    <string name="TelegramForAndroid">Telegram Multi for Android</string>
     <string name="TelegramVersion">Telegram for Android %1$s</string>
     <string name="TerminateAllSessions">Terminate All Other Sessions</string>
     <string name="TerminateSessionInfo">Tap on a session to terminate.</string>
@@ -1876,7 +1876,7 @@ Don't take it, Telegram will process everything automatically."</string>
     <string name="ThemePreview">Theme Preview</string>
     <string name="ThemeUpdated">%s has been updated</string>
     <string name="Themes">Themes</string>
-    <string name="ThemesAppMsg">Would you like to check some themes created by other Plus Messenger users?</string>
+    <string name="ThemesAppMsg">Would you like to check some themes created by other Telegram Multi users?</string>
     <string name="Theming">Theming</string>
     <string name="TimeDateColor">Time/Date color</string>
     <string name="TimeDateSize">Time/Date size</string>
@@ -1958,8 +1958,8 @@ Don't take it, Telegram will process everything automatically."</string>
     <string name="UsernameAvailable">%1$s is available.</string>
     <string name="UsernameChecking">Checking username...</string>
     <string name="UsernameEmpty">None</string>
-    <string name="UsernameHelp">You can choose a username on &lt;b>Plus Messenger&lt;/b>. If you do, other people will be able to find you by this username and contact you without knowing your phone number.&lt;br>&lt;br>You can use &lt;b>a–z&lt;/b>, &lt;b>0–9&lt;/b> and underscores. Minimum length is &lt;b>5&lt;/b> characters.</string>
-    <string name="UsernameHelpLink">"This link opens a chat with you on Plus Messenger:
+    <string name="UsernameHelp">You can choose a username on &lt;b>Telegram Multi&lt;/b>. If you do, other people will be able to find you by this username and contact you without knowing your phone number.&lt;br>&lt;br>You can use &lt;b>a–z&lt;/b>, &lt;b>0–9&lt;/b> and underscores. Minimum length is &lt;b>5&lt;/b> characters.</string>
+    <string name="UsernameHelpLink">"This link opens a chat with you on Telegram Multi:
 %1$s"</string>
     <string name="UsernameInUse">Sorry, this username is already taken.</string>
     <string name="UsernameInvalid">Sorry, this username is invalid.</string>
@@ -2132,7 +2132,7 @@ If you forget your password, you will lose access to your Telegram account. Ther
 · If Supergroups tab is hidden all supergroups will appear in groups tab 
 · To make tabs visible at least 2 tabs must be shown"</string>
     <string name="Unread">Unread</string>
-    <string name="UsePlusTheme">Use Plus theming</string>
+    <string name="UsePlusTheme">Use Multi theming</string>
     <string name="ShowUserBio">Show user bio</string>
     <string name="SortUnmutedFirst">Sort: unmuted first</string>
     <string name="hockeyapp_crash_dialog_app_name_fallback">This app</string>
@@ -2205,7 +2205,7 @@ If you forget your password, you will lose access to your Telegram account. Ther
     <string name="hockeyapp_update_dialog_positive_button">Show</string>
     <string name="hockeyapp_update_dialog_title">Update Available</string>
     <string name="hockeyapp_update_mandatory_toast">%s is available and is a mandatory update!</string>
-    <string name="AppNameBeta">Plus Messenger Beta</string>
+    <string name="AppNameBeta">Telegram Multi</string>
     <string name="PlusVersion">Telegram Multi Version</string>
     <string name="ShortAppName">Telegram Multi</string>
     <string name="ShowMySettings">Show my settings</string>
