--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,5 @@
 IntroActivity
 Drawables in IntroActivity
 Users count in multiuser
+
+Set Settings - Theme - Back - Customize - Theme Multi - run only in double click.
