--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -3,6 +3,7 @@ v4.2.1.1
 - Различные исправления и улучшения.
 - Исправлены недоработки в работе мультиюзера
 - Исправлены цвета в обычных активностях
+- В окне мультиюзера добавлено количество максимально оставшихся для добавлению пользователей.
 
 v4.2.1.0
 – Возможность отправки самоуничтожающихся фото/видео в личных сообщениях вне секретных чатов. 
