--- a/TODO.txt
+++ b/TODO.txt
@@ -1,2 +1,3 @@
 Set Settings - Theme - Back - Customize - Theme Multi - run only in double click.
 Change locale not work - auto set to English.
+Rename to Multigram
