localization settings fix

--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -1,3 +1,8 @@
+v4.2.1.2
+– Для соблюдения правил Telegram приложение переименовано в Multigram.
+- Исправлена смена языка и применение файлов локализации.
+- Исправлены другие ошибки.
+
 v4.2.1.1
 – Настройка P2.25, которая позволяет включить отображение биографии пользователя, сверху диалога с ним).
 - Различные исправления и улучшения.
