--- a/ReleaseNotes.txt
+++ b/ReleaseNotes.txt
@@ -1,3 +1,6 @@
+v4.2.1.3
+Ц ќтключена подписка на наши каналы.
+
 v4.2.1.2
 Ц ƒл€ соблюдени€ правил Telegram приложение переименовано в Multigram.
 - »справлена смена €зыка и применение файлов локализации.
